--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ButtonBar?>
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.layout.Pane?>
 
-<ButtonBar maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9">
-  <buttons>
-    <Button mnemonicParsing="false" text="Button" />
-      <ComboBox prefWidth="150.0" />
-  </buttons>
-</ButtonBar>
+
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="625.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
+   <children>
+      <ListView fx:id="kingdom1" layoutY="80.0" prefHeight="88.0" prefWidth="625.0" />
+      <ListView fx:id="hand2" layoutX="-2.0" layoutY="421.0" prefHeight="94.0" prefWidth="625.0" />
+      <ListView fx:id="deck" layoutX="278.0" layoutY="204.0" prefHeight="94.0" prefWidth="69.0" />
+      <ListView fx:id="hand1" layoutX="-2.0" layoutY="-8.0" prefHeight="88.0" prefWidth="625.0" />
+      <ListView fx:id="kingdom2" layoutY="327.0" prefHeight="94.0" prefWidth="625.0" />
+   </children>
+</Pane>
