--- a/src/main/java/sample/sample.fxml
+++ b/src/main/java/sample/sample.fxml
@@ -1,15 +1,341 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="515.0" prefWidth="625.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
+<Pane id="pane" maxHeight="1280" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720" prefWidth="1280" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <ListView fx:id="kingdom1" layoutY="80.0" prefHeight="88.0" prefWidth="625.0" />
-      <ListView fx:id="hand2" layoutX="-2.0" layoutY="421.0" prefHeight="94.0" prefWidth="625.0" />
-      <ListView fx:id="deck" layoutX="278.0" layoutY="204.0" prefHeight="94.0" prefWidth="69.0" />
-      <ListView fx:id="hand1" layoutX="-2.0" layoutY="-8.0" prefHeight="88.0" prefWidth="625.0" />
-      <ListView fx:id="kingdom2" layoutY="327.0" prefHeight="94.0" prefWidth="625.0" />
+      <GridPane layoutX="103.0" layoutY="315.0" prefHeight="90.0" prefWidth="231.0" style="-fx-background-color: #c9d3d3; -fx-border-color: #adb2b2; -fx-border-width: 3px;">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Score : 0" textAlignment="CENTER" GridPane.rowIndex="2" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Number of cards : 0" GridPane.rowIndex="1" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Player 1 : Name" />
+         </children>
+      </GridPane>
+      <GridPane fx:id="HandPlayer2" layoutX="14.0" layoutY="587.0" prefHeight="119.0" prefWidth="1258.0" style="-fx-border-color: #7fb27b; -fx-border-width: 3px; -fx-background-color: #bcd1c2;">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
+               <image>
+                  <Image url="@../Goblin.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3">
+               <image>
+                  <Image url="@../Elf.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4">
+               <image>
+                  <Image url="@../Dryad.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5">
+               <image>
+                  <Image url="@../Goblin.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6">
+               <image>
+                  <Image url="@../Dryad.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7">
+               <image>
+                  <Image url="@../Gnome.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="9">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+         </children>
+      </GridPane>
+      <GridPane fx:id="KingdomPlayer2" layoutX="14.0" layoutY="475.0" prefHeight="100.0" prefWidth="1258.0" style="-fx-border-color: #a882c9; -fx-border-width: 3px; -fx-background-color: #b7a5c9;">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4">
+               <image>
+                  <Image url="@../Dryad.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5">
+               <image>
+                  <Image url="@../Elf.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="9">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+         </children>
+      </GridPane>
+      <GridPane layoutX="560.0" layoutY="275.0" prefHeight="193.0" prefWidth="131.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <ImageView fitHeight="189.0" fitWidth="248.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Card left 45">
+               <font>
+                  <Font size="24.0" />
+               </font>
+            </Text>
+         </children>
+      </GridPane>
+      <GridPane fx:id="KingdomPlayer1" layoutX="14.0" layoutY="164.0" prefHeight="100.0" prefWidth="1258.0" style="-fx-border-color: #a882c9; -fx-border-width: 3px; -fx-background-color: #b7a5c9;">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4">
+               <image>
+                  <Image url="@../Goblin.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5">
+               <image>
+                  <Image url="@../Gnome.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6">
+               <image>
+                  <Image url="@../Elf.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="9">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+         </children>
+      </GridPane>
+      <GridPane fx:id="HandPlayer1" layoutX="14.0" layoutY="37.0" prefHeight="119.0" prefWidth="1258.0" style="-fx-border-color: #7fb27b; -fx-border-width: 3px; -fx-background-color: #bcd1c2;">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="1">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="2">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="4">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="5">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="6">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="7">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="8">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="9">
+               <image>
+                  <Image url="@../yugioh_reverse.png" />
+               </image>
+            </ImageView>
+         </children>
+      </GridPane>
+      <GridPane layoutX="898.0" layoutY="316.0" prefHeight="90.0" prefWidth="231.0" style="-fx-background-color: #c9d3d3; -fx-border-color: #adb2b2; -fx-border-width: 3px;">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Score : 0" textAlignment="CENTER" GridPane.rowIndex="2" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Number of cards : 0" GridPane.rowIndex="1" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Player 1 : Name" />
+         </children>
+      </GridPane>
    </children>
 </Pane>
