--- a/src/main/java/sample/sample.fxml
+++ b/src/main/java/sample/sample.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane id="pane" maxHeight="1280" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720" prefWidth="1280" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1">
+<Pane id="pane" maxHeight="1280" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720" prefWidth="1280" stylesheets="@style.css" xmlns="http://javafx.com/javafx/8.0.141" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
    <children>
       <GridPane layoutX="103.0" layoutY="315.0" prefHeight="90.0" prefWidth="231.0" style="-fx-background-color: #c9d3d3; -fx-border-color: #adb2b2; -fx-border-width: 3px;">
         <columnConstraints>
@@ -43,7 +43,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: crosshair;">
                <image>
                   <Image url="@../yugioh_reverse.png" />
                </image>
@@ -270,7 +270,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="93.0" fitWidth="86.0" opacity="0.2" pickOnBounds="true" preserveRatio="true" style="-fx-cursor: pointer;">
                <image>
                   <Image url="@../yugioh_reverse.png" />
                </image>
