--- a/src/main/java/sample/sample.fxml
+++ b/src/main/java/sample/sample.fxml
@@ -47,61 +47,61 @@
          <children>
             <Button id="HandPlayer2_Card0" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:true,id:0}">
                <styleClass>
-                  <String fx:value="card" />
-                  <String fx:value="reverse" />
+                  <String fx:value="Card" />
+                  <String fx:value="Reverse" />
                </styleClass></Button>
             <Button id="HandPlayer2_Card1" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:true,id:1}" GridPane.columnIndex="1">
                <styleClass>
-                  <String fx:value="card" />
-                  <String fx:value="reverse" />
+                   <String fx:value="Card" />
+                   <String fx:value="Reverse" />
                </styleClass>
             </Button>
             <Button id="HandPlayer2_Card2" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:true,id:2}" GridPane.columnIndex="2">
                <styleClass>
-                  <String fx:value="card" />
-                  <String fx:value="reverse" />
+                   <String fx:value="Card" />
+                   <String fx:value="Reverse" />
                </styleClass>
             </Button>
             <Button id="HandPlayer2_Card3" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:true,id:3}" GridPane.columnIndex="3">
                <styleClass>
-                  <String fx:value="card" />
-                  <String fx:value="reverse" />
+                   <String fx:value="Card" />
+                   <String fx:value="Reverse" />
                </styleClass>
             </Button>
             <Button id="HandPlayer2_Card4" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:true,id:4}" GridPane.columnIndex="4">
                <styleClass>
-                  <String fx:value="card" />
-                  <String fx:value="reverse" />
+                   <String fx:value="Card" />
+                   <String fx:value="Reverse" />
                </styleClass>
             </Button>
             <Button id="HandPlayer2_Card5" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:true,id:5}" GridPane.columnIndex="5">
                <styleClass>
-                  <String fx:value="card" />
-                  <String fx:value="reverse" />
+                   <String fx:value="Card" />
+                   <String fx:value="Reverse" />
                </styleClass>
             </Button>
             <Button id="HandPlayer2_Card6" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:true,id:6}" GridPane.columnIndex="6">
                <styleClass>
-                  <String fx:value="card" />
-                  <String fx:value="reverse" />
+                   <String fx:value="Card" />
+                   <String fx:value="Reverse" />
                </styleClass>
             </Button>
             <Button id="HandPlayer2_Card7" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:true,id:7}" GridPane.columnIndex="7">
                <styleClass>
-                  <String fx:value="card" />
-                  <String fx:value="reverse" />
+                   <String fx:value="Card" />
+                   <String fx:value="Reverse" />
                </styleClass>
             </Button>
             <Button id="HandPlayer2_Card8" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:true,id:8}" GridPane.columnIndex="8">
                <styleClass>
-                  <String fx:value="card" />
-                  <String fx:value="reverse" />
+                   <String fx:value="Card" />
+                   <String fx:value="Reverse" />
                </styleClass>
             </Button>
             <Button id="HandPlayer2_Card9" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:true,id:9}" GridPane.columnIndex="9">
                <styleClass>
-                  <String fx:value="card" />
-                  <String fx:value="reverse" />
+                   <String fx:value="Card" />
+                   <String fx:value="Reverse" />
                </styleClass>
             </Button>
          </children>
@@ -125,61 +125,61 @@
           <children>
               <Button id="KingdomPlayer2_Card0" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:false,id:0}">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass></Button>
               <Button id="KingdomPlayer2_Card1" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:false,id:1}" GridPane.columnIndex="1">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="KingdomPlayer2_Card2" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:false,id:2}" GridPane.columnIndex="2">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="KingdomPlayer2_Card3" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:false,id:3}" GridPane.columnIndex="3">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="KingdomPlayer2_Card4" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:false,id:4}" GridPane.columnIndex="4">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="elf" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="KingdomPlayer2_Card5" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:false,id:5}" GridPane.columnIndex="5">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="dryad" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="KingdomPlayer2_Card6" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:false,id:6}" GridPane.columnIndex="6">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="gnome" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="KingdomPlayer2_Card7" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:false,id:7}" GridPane.columnIndex="7">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="KingdomPlayer2_Card8" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:false,id:8}" GridPane.columnIndex="8">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="KingdomPlayer2_Card9" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:2,hand:false,id:9}" GridPane.columnIndex="9">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
           </children>
@@ -223,61 +223,61 @@
           <children>
               <Button id="KingdomPlayer1_Card0" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:false,id:0}">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass></Button>
               <Button id="KingdomPlayer1_Card1" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:false,id:1}" GridPane.columnIndex="1">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="KingdomPlayer1_Card2" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:false,id:2}" GridPane.columnIndex="2">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="KingdomPlayer1_Card3" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:false,id:3}" GridPane.columnIndex="3">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="KingdomPlayer1_Card4" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:false,id:4}" GridPane.columnIndex="4">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="dryad" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="KingdomPlayer1_Card5" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:false,id:5}" GridPane.columnIndex="5">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="goblin" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="KingdomPlayer1_Card6" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:false,id:6}" GridPane.columnIndex="6">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="KingdomPlayer1_Card7" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:false,id:7}" GridPane.columnIndex="7">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="KingdomPlayer1_Card8" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:false,id:8}" GridPane.columnIndex="8">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="KingdomPlayer1_Card9" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:false,id:9}" GridPane.columnIndex="9">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
           </children>
@@ -301,61 +301,61 @@
           <children>
               <Button id="HandPlayer1_Card0" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:true,id:0}">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass></Button>
               <Button id="HandPlayer1_Card1" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:true,id:1}" GridPane.columnIndex="1">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="HandPlayer1_Card2" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:true,id:2}" GridPane.columnIndex="2">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="HandPlayer1_Card3" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:true,id:3}" GridPane.columnIndex="3">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="HandPlayer1_Card4" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:true,id:4}" GridPane.columnIndex="4">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="HandPlayer1_Card5" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:true,id:5}" GridPane.columnIndex="5">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="HandPlayer1_Card6" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:true,id:6}" GridPane.columnIndex="6">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="HandPlayer1_Card7" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:true,id:7}" GridPane.columnIndex="7">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="HandPlayer1_Card8" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:true,id:8}" GridPane.columnIndex="8">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
               <Button id="HandPlayer1_Card9" mnemonicParsing="false" onAction="#numChange" prefHeight="90.0" prefWidth="70.0" userData="{player:1,hand:true,id:9}" GridPane.columnIndex="9">
                   <styleClass>
-                      <String fx:value="card" />
-                      <String fx:value="reverse" />
+                      <String fx:value="Card" />
+                      <String fx:value="Reverse" />
                   </styleClass>
               </Button>
           </children>
